# Dodge-Cat

./: .gitignore  BulletPhysics.cpp  BulletPhysics.hpp  CameraInputComponent.hpp  Cat.hpp  CatGraphicsComponent.hpp  CatPhysicsComponent.hpp  DodgeCat  ExtendedCamera.cpp  ExtendedCamera.hpp  FrameListener.hpp  GUIHandler.cpp  GUIHandler.h  GameManager.cpp  GameManager.h  GameManager.hpp  GameObject.cpp  GameObject.hpp  GraphicsComponent.hpp  InputComponent.hpp  Listener.cpp  Listener.hpp  Makefile.am  NetManager.cpp  NetManager.h  NewGameManager.cpp  NewGameManager.hpp  NewOldCat.hpp  OldCat.hpp  OldGameManager.cpp  OldGameManager.hpp  OldPlayer.cpp  OldPlayer.hpp  Physics.hpp  PhysicsComponent.hpp  Player.cpp  Player.hpp  PlayerCameraComponent.hpp  PlayerData.hpp  PlayerGraphicsComponent.hpp  (+18 more)
Notes/: BasicTutorial7.cpp  BasicTutorial7.h  audioNotes.cpp
assets/: 03.material  04.material  Cat.material  Cat.mesh  Cat.tga  SprayBottle.mesh  Untitled.017.mesh.xml  bottle.material  bottle_red.material  bottle_white.material  parts_Slot_#10.002.material  parts_Slot_#10.003.material  parts_Slot_#10.004.material  parts_Slot_#10.005.material  parts_Slot_#10.006.material  parts_Slot_#10.007.material  parts_Slot_#10.008.material  parts_Slot_#10.material  parts_Slot_#3.001.material  parts_Slot_#3.002.material  parts_Slot_#3.003.material  parts_Slot_#3.005.material  parts_Slot_#3.006.material  parts_Slot_#3.007.material  parts_Slot_#3.008.material  parts_Slot_#3.material  parts_Slot_#4.001.material  parts_Slot_#4.002.material  parts_Slot_#4.003.material  parts_Slot_#4.004.material  parts_Slot_#4.005.material  parts_Slot_#4.006.material  parts_Slot_#4.007.material  parts_Slot_#4.008.material  parts_Slot_#4.material  parts_Slot_#5.001.material  parts_Slot_#5.002.material  parts_Slot_#5.003.material  parts_Slot_#5.004.material  parts_Slot_#5.005.material  (+37 more)
assets/cannon/: CannonBase.mesh  CannonSpray.mesh  Mat.1.material  Mat.2.material  Mat.4.material  Mat.5.material  Mat.7.material  Mat.material  Player.blend  Player.blend1  Player.fbx  Steampunk Cannon.fbx  parts_Slot_#10.001.material  parts_Slot_#3.004.material  parts_Slot_#6.003.material  parts_Slot_#6.008.material  parts_Slot_#7.004.material  parts_Slot_#8.002.material  parts_Slot_#8.008.material  parts_Slot_#9.002.material
(+5 files in other folders)
